<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatCheckBox
        android:text="@string/tennis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tennisBox"
        android:layout_below="@+id/soccerBox"
        android:layout_alignLeft="@+id/soccerBox"
        android:layout_alignStart="@+id/soccerBox"
        android:theme="@style/MyCheckBox"/>

    <android.support.v7.widget.AppCompatCheckBox
        android:text="@string/baseball"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/baseballBox"
        android:layout_below="@+id/basketballBox"
        android:layout_alignLeft="@+id/basketballBox"
        android:layout_alignStart="@+id/basketballBox"
        android:theme="@style/MyCheckBox"/>

    <android.support.v7.widget.AppCompatCheckBox
        android:text="@string/lacrosse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tennisBox"
        android:layout_alignLeft="@+id/tennisBox"
        android:layout_alignStart="@+id/tennisBox"
        android:id="@+id/lacrosseBox"
        android:theme="@style/MyCheckBox"/>

    <TextView
        android:text="@string/sports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/tennisBox"
        android:layout_alignBottom="@+id/tennisBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/skill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lacrosseBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp"
        android:id="@+id/textView5"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/skill_level"
        android:layout_alignTop="@+id/textView5"
        android:id="@+id/skillSpinner"
        android:layout_centerInParent="false"
        android:layout_centerVertical="false"
        android:textAlignment="center"
        android:layout_alignEnd="@+id/distanceSpinner"
        android:layout_alignRight="@+id/distanceSpinner"
        android:layout_toEndOf="@+id/tennisBox"
        android:layout_toRightOf="@+id/tennisBox"/>

    <TextView
        android:text="@string/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/skillSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp"
        android:id="@+id/textView6"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp" />

    <android.support.v7.widget.AppCompatCheckBox
        android:text="@string/any"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/anyBox"
        android:checked="true"
        android:theme="@style/MyCheckBox"
        android:layout_below="@+id/softballBox"
        android:layout_alignLeft="@+id/softballBox"
        android:layout_alignStart="@+id/softballBox" />

    <android.support.v7.widget.AppCompatCheckBox
        android:text="@string/hockey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hockeyBox"
        android:layout_alignBottom="@+id/basketballBox"
        android:layout_toEndOf="@+id/basketballBox"
        android:layout_toRightOf="@+id/basketballBox"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:theme="@style/MyCheckBox"
        android:layout_marginLeft="12dp" />

    <android.support.v7.widget.AppCompatCheckBox
        android:text="@string/soccer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/soccerBox"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:theme="@style/MyCheckBox"/>

    <android.support.v7.widget.AppCompatCheckBox
        android:text="@string/softball"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/softballBox"
        android:theme="@style/MyCheckBox"
        android:layout_below="@+id/hockeyBox"
        android:layout_alignLeft="@+id/hockeyBox"
        android:layout_alignStart="@+id/hockeyBox" />

    <android.support.v7.widget.AppCompatCheckBox
        android:text="@string/volleyball"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/volleyballBox"
        android:theme="@style/MyCheckBox"
        android:layout_below="@+id/baseballBox"
        android:layout_alignLeft="@+id/baseballBox"
        android:layout_alignStart="@+id/baseballBox" />

    <android.support.v7.widget.AppCompatCheckBox
        android:text="@string/basketball"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/basketballBox"
        android:theme="@style/MyCheckBox"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/lacrosseBox"
        android:layout_toEndOf="@+id/lacrosseBox" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/distances"
        android:id="@+id/distanceSpinner"
        android:textAlignment="center"
        android:layout_alignBottom="@+id/textView6"
        android:layout_toEndOf="@+id/textView6"
        android:layout_toRightOf="@+id/textView6"/>

    <TextView
        android:text="@string/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="47dp"
        android:id="@+id/textView"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:background="@drawable/text_border"
        android:text="@string/any"
        android:textAlignment="center"
        android:ems="10"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:id="@+id/dateText"
        android:focusable="false"/>

    <Button
        android:text="@string/apply_filter"
        android:background="@drawable/round_button"
        android:layout_height="wrap_content"
        android:id="@+id/filterButton"
        android:onClick="applyFilter"
        android:textColor="@android:color/white"
        android:layout_marginTop="75dp"
        android:layout_width="200dp"
        android:layout_below="@+id/dateText"
        android:layout_centerHorizontal="true" />

</RelativeLayout>