<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <fragment
        android:id="@+id/autocompleteFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
        android:layout_below="@+id/textLocation" />

        <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/skillSpinner"
        android:entries="@array/skill_level"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/textSkill"
        android:layout_alignLeft="@+id/textSkill"
        android:layout_alignStart="@+id/textSkill"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
            android:textAlignment="center"
            android:layout_alignRight="@+id/eventDateText"
            android:layout_alignEnd="@+id/eventDateText" />


        <TextView
        android:text="@string/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textLocation"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/textSport"
        android:layout_alignStart="@+id/textSport" />

        <TextView
        android:text="@string/skill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textSkill"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/sportSpinner"
        android:layout_alignLeft="@+id/textSport"
        android:layout_alignStart="@+id/textSport" />

    <TextView
        android:text="@string/sport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textSport"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/autocompleteFragment"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp" />

        <TimePicker
            android:id="@+id/eventTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            android:layout_below="@+id/textTime"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text="@string/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textDate"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            android:layout_marginTop="24dp"
            android:layout_below="@+id/skillSpinner"
            android:layout_alignStart="@+id/textSkill"
            android:layout_alignLeft="@+id/textSkill"/>

        <TextView
            android:text="@string/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textTime"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            android:layout_below="@+id/textDate"
            android:layout_alignStart="@+id/textDate"
            android:layout_alignLeft="@+id/textDate"
            android:layout_marginTop="53dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/date_format"
            android:ems="10"
            android:id="@+id/eventDateText"
            android:focusable="false"
            android:background="@drawable/text_border"
            android:textAlignment="center"
            android:layout_below="@+id/textDate"
            android:layout_marginTop="12dp"
            android:layout_alignLeft="@+id/textDate"
            android:layout_alignStart="@+id/textDate"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sportSpinner"
            android:entries="@array/sports"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/textSport"
            android:textAlignment="center"
            android:layout_alignEnd="@+id/eventDateText"
            android:layout_alignRight="@+id/eventDateText"
            android:layout_alignStart="@+id/skillSpinner"
            android:layout_alignLeft="@+id/skillSpinner"/>

        <Button
            android:text="@string/create"
            android:layout_height="wrap_content"
            android:id="@+id/eventInfoButton"
            android:onClick="sendEventInfo"
            android:background="@drawable/round_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@android:color/background_light"
            android:layout_width="250dp"
            android:layout_marginTop="45dp"
            android:layout_below="@+id/eventTime"
            android:layout_alignLeft="@+id/eventTime"
            android:layout_alignStart="@+id/eventTime" />


    </RelativeLayout>
</ScrollView>